thumbnails scrollbar fix, #171

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
   justify-content: initial;
 }
 
+.thumbnails.scroll-hide.svelte-g4rw9 {
+  justify-content: initial;
+}
+
 div[id^="image_browser_tab"][id$="image_browser_gallery"].hide_loading > .svelte-gjihhp {
   display: none;
 }
